# xiongchenyu6.github.io

./: .dir-locals.el  .gitignore  .travis.yml  404.html  CLAUDE.md  README.org  about.html  about.md  about.rst  archive.html  config.toml  contact.html  contact.markdown  flake.nix  index.html  index.json  index.xml  resume.org  site.hs  sitemap.xml  stack.yaml  xiongchenyu6-github-io.cabal
.github/workflows/: gh-pages.yml  hugo.yml
_site/: 404.html  about.html  archive.html  contact.html  index.html
_site/css/: style.css
_site/posts/: 2015-12-07-tu-quoque.html  2019-10-25-test.html  2019-10-28-OOPvsFP.html  2019-10-28-test1.html
_site/resume/: resume.html
categories/: index.html
categories/fp/: index.html  index.xml
categories/fsdf/: index.html  index.xml
content/: resume.md
content-org/: all-post.org  resume.org
content-org/Notes/: algorithms.org  aplll.org  asm.org  aws.org  bibtex.org  bigo.org  blockchain.org  book.org  bracket_pattern.org  c_c.org  cache.org  chainlink.org  chatgpt.org  chiken_soup.org  (+112 more)
css/: style.hs  style.min.css.map
posts/: 2015-12-07-tu-quoque.html  2015-12-07-tu-quoque.markdown  2015-12-07-tu-quoque.org  2019-10-25-OOPvsFP.html  2019-10-25-OOPvsFP.org  2019-10-25-test.html  2019-10-25-test.org  2019-10-28-OOPvsFP.html  2019-10-28-OOPvsFP.org  2019-10-28-test1.html  2019-10-28-test1.org  index.html  index.xml
resume/: fa_orgmode_cv.sty  index.html  index.md  resume-front-end.org  resume.org  resume.tex
tags/: fp.html  index.html  scala.html
templates/: archive.html  default.html  footer.html  nav.html  post.html
(+78 files in other folders)
