name:               xiongchenyu6-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , data-default >= 0.7
  ghc-options:      -threaded
  default-language: Haskell2010

executable style
  main-is:          css/style.hs
  build-depends:    base == 4.*
                  , clay
  ghc-options:      -threaded
  default-language: Haskell2010
